--- a/lab1/report/20-design.tex
+++ b/lab1/report/20-design.tex
@@ -18,7 +18,7 @@
 
 \section{Алгоритмы нахождения расстояния Дамерау-Левенштейна}
 
-На рисунке \ref{img:Dl_recursion} приведена схема рекурсивного алгоритма поиска расстояния Дамерау-Левенштейна кеширования.
+На рисунке \ref{img:Dl_recursion} приведена схема рекурсивного алгоритма поиска расстояния Дамерау-Левенштейна.
 
 \img{220mm}{Dl_recursion}{Схема рекурсивного алгоритма поиска расстояния Дамерау-Левенштейна}
 
