--- a/lab1/report/51-biblio.bib
+++ b/lab1/report/51-biblio.bib
@@ -7,8 +7,7 @@
 	pages = {31-35}
 }
 
-@inbook{
-	Levenshtein,
+@inbook{Levenshtein,
 	author="Левенштейн, В. И.",
 	title="Двоичные коды с исправлением выпадений, вставок и замещений символов",
 	publisher="-- М.: Доклады АН СССР",
@@ -19,15 +18,31 @@
 	year=1965
 }
 
-@misc{rustlang,
-	title="Rust Programming Language [Электронный ресурс]",
-	howpublished="Режим доступа: \url{https://www.rust-lang.org/} (дата обращения: 11.09.2020)"
+@inbook{PythonBook,
+	author="Лутц, Марк",
+	title="Изучаем Python, том 1, 5-е изд.",
+	publisher="Пер. с англ. — СПб.: ООО “Диалектика”",
+	volume=832,
+	language="russian",
+	year=2019
 }
 
-@misc{rusttest,
-	title="Документация по ЯП Rust: бенчмарки [Электронный ресурс]",
-	howpublished="Режим доступа: \url{https://doc.rust-lang.org/1.7.0/book/benchmark-tests.html} (дата обращения: 12.09.2020)"
+@misc{process_time_text,
+	title="time — Time access and conversions [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://docs.python.org/3/library/time.html} (дата обращения: 05.09.2021)"
 }
+
+@misc{memory_usage_text,
+	title="memory-profiler [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://pypi.org/project/memory-profiler/} (дата обращения: 05.09.2021)"
+}
+
+@misc{pycharm,
+	title="Python и Pycharm [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://py-charm.blogspot.com/2017/09/pycharm.html} (дата обращения: 05.09.2021)"
+}
+
+
 
 @misc{manjaro,
 	title="Manjaro -- enjoy the simplicity [Электронный ресурс]",
