--- a/lab1/report/30-impl.tex
+++ b/lab1/report/30-impl.tex
@@ -4,17 +4,17 @@
 
 \section{Требования к ПО}
 
-На вход программе подаются две строки (регистрозависимые), а на выходе должно быть получено искомое расстояние, посчитанное с помощью каждого реализованного алгоритма: для расстояния Левенштейна - итерационный и рекурсивный (с кешем и без), а для расстояния Дамерау-Левенштейна - рекурсивный без кеша. Также необходимо вывести затраченное каждым алгоритмом процессорное время и пиковый объем выделенной памяти.
+На вход программе подаются две строки (регистрозависимые), а на выходе должно быть получено искомое расстояние, посчитанное с помощью каждого реализованного алгоритма: для расстояния Левенштейна - итерационный и рекурсивный (с кешем и без), а для расстояния Дамерау-Левенштейна - рекурсивный без кеша. Также необходимо вывести затраченное каждым алгоритмом процессорное время.
 
-\section{Средства реализации}
+\section{Выбор средств реализации}
 
 В качестве языка программирования для реализации данной лабораторной работы был выбран язык Python  \cite{PythonBook}. Он позволяет быстро реализовывать различные алгоритмы без выделения большого времени на проектирование сруктуры программы и выбор типов данных. 
 
-Кроме того, в Python есть библиотека time, которая предоставляет функцию process\_time для замра процессорного времени \cite{process_time_text}, а также библиотека memory\_profiler, предоставляющая функцию memory\_usage, которая позволяет замерить пиковый объем памяти, выделенный при работе функции \cite{memory_usage_text}.
+Кроме того, в Python есть библиотека time, которая предоставляет функцию process\_time для замера процессорного времени \cite{process_time_text}.
 
 В качестве среды разработки выбран PyCharm. Он является кросс-платформенным, а также предоставляет удобный и функциональнаый отладчик и средства для рефакторинга кода, что позволяет быстро находить и исправлять ошибки \cite{pycharm}.
 
-\section{Листинг кода}
+\section{Листинги кода}
 
 В листингах \ref{lev_matrix} - \ref{dlev_recursion} представлены реализации рассматриваемых алгоритмов.
 
@@ -120,7 +120,7 @@
 
 \section{Тестирование}
 
-В таблице \ref{tabular:test} приведены функциональные тесты для алгоритмов вычисления расстояния Левенштейна и Дамерау — Левенштейна. Тесты пройдены успешно.
+В таблице \ref{test} приведены функциональные тесты для алгоритмов вычисления расстояния Левенштейна и Дамерау — Левенштейна. Тесты пройдены успешно.
 
 \begin{table}[h]
 	\begin{center}
