--- a/lab1/report/50-conclusion.tex
+++ b/lab1/report/50-conclusion.tex
@@ -1,12 +1,13 @@
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
 
-В ходе выполнения лабораторной работы была проделана следующая работа:
+В результате выполнения лабораторной работы при при исследовании алгоритмов нахождения расстояний Левенштейна и Дамерау-Левенштейна были применены и отработаны навыки динамического программирования.
 
-\begin{itemize}
-    \item были теоретически изучены алгоритмы нахождения расстояний Левенштейна и Дамерау--Левенштейна;
-	\item для некоторых реализаций были применены методы динамического программирования, что позволило сделать алгоритмы быстрее;
-	\item были практически реализованы алгоритмы в 2 вариантах: рекурсивном и итеративном;
-	\item на основе полученных в ходе экспериментов данных были сделаны выводы по поводу эффективности всех реализованных алгоритмов;
-	\item был подготовлен отчет по ЛР.
-\end{itemize}
+В ходе выполнения лабораторной работы были выполнены следующие задачи: 
+\begin{enumerate}[label={\arabic*)}]
+	\item изучены расстояния Левенштейна и Дамерау-Левенштейна;
+	\item разработаны и рнализованы алгоритмы поиска этих расстояний;
+	\item проведен сравнительный анализ процессорного времени выполнения реализаций этих алгоритмов, а также затрачиваемой ими пиковой памяти;
+	\item был подготовлен отчет по лабораторной работе.
+\end{enumerate}
+
