--- a/lab1/report/02-intro.tex
+++ b/lab1/report/02-intro.tex
@@ -1,17 +1,17 @@
 \chapter*{Введение}
 \addcontentsline{toc}{chapter}{Введение}
 
-Целью данной лабораторной работы является применение навыков динамического программирования в алгоритмах нахождения расстояний Левенштейна и Дамерау-Левенштейна.
+Целью данной лабораторной работы является применение навыков динамического программирования в алгоритмах поиска расстояний Левенштейна и Дамерау-Левенштейна.
 
 Определение расстояния Леввенштейна (редакционного расстояния) основано на понятии «редакционное предписание».
 
-Редакционное предписание – последовательность действий, необходимых для получения из первой строки второй кратчайшим способом. 
+Редакционное предписание – последовательность действий, необходимых для получения второй строки из первой  кратчайшим способом. 
 
 Расстояние Левенштейна – минимальное количество действий (вставка, удаление, замена символа), необходимых для преобразования одного слова в другое. 
 
 Если текст был набран с клавиатуры, то вместо расстояния Левенштейна чаще используют расстояние Дамерау – Левенштейна, в котором добавляется еще одно возможное действие - перестановка двух соседних символов.~\cite{Passenger}
 
-Расстояние Левенштейна и Дамерау – Левенштейна применяется в таких сферах, как: 
+Расстояния Левенштейна и Дамерау – Левенштейна применяются в таких сферах, как: 
 \begin{itemize}
 	\item компьютерная лингвистика (автозамена в посиковых запросах, текстовая редактура);
 	\item биоинформатика (сравнение генов, хромосом и белков);
@@ -24,5 +24,5 @@
 	\item разработать алгоритмы поиска этих расстояний;
 	\item реализовать разработанные алгоритмы;
 	\item провести сравнительный анализ процессорного времени выполнения реализаций этих алгоритмов;
-	\item провести сравнительный анализ затраченной реализованными алгоритмами пиковой памяти.
+	\item провести сравнительный анализ затрачиваемой реализованными алгоритмами пиковой памяти.
 \end{enumerate}
