--- a/lab1/report/10-analysis.tex
+++ b/lab1/report/10-analysis.tex
@@ -2,15 +2,15 @@
 
 Расстояния Левенштейна и Дамерау–Левенштейна – это минимальное количество действий, необходимых для преобразования одной строки в другую. Различие между этими расстояниями - в наборе допустимых операций. 
 
-В расстоянии Левенштейна расссматриваются такие действия над символами, как I-insert (вставка), D-delete (удаление) и R-replace (замена). Также вводится операция, которая не требует никаких действий: M-match(совпадение).
+В расстоянии Левенштейна расссматриваются такие действия над символами, как вставка (I-insert), удаление (D-delete) и замена (R-replace). Также вводится операция, которая не требует никаких действий - совпадение (M-match).
 
-В расстоянии Дамерау–Левенштейна в дополнение к перечисленным операциям вводится действие X-xchange (перестановка соседних символов).
+В расстоянии Дамерау–Левенштейна в дополнение к перечисленным операциям вводится также перестановка соседних символов (X-xchange).
 
 Данным операциям можно назначить цену (штраф). Часто ипользуется следующий набор штрафов: для операции M он равен нулю, а для остальных (I, D, R, X) - единице. 
 
-Тогда задача нахождения расстояний Левенштейна и Дамерау–Левенштейна сводится к поиску последовательности действий, минимизирующих суммарный штраф. Это можно сделать с помощью рекуррентных формул, которые будут рассмотрены в этом разделе.
+Тогда задача нахождения расстояний Левенштейна и Дамерау–Левенштейна сводится к поиску последовательности действий, минимизирующих суммарный штраф \cite{Levenshtein}. Это можно сделать с помощью рекуррентных формул, которые будут рассмотрены в этом разделе.
 
-\section{Нахождение расстояния Левенштейна}
+\section{Расстояние Левенштейна}
  
 Пусть дано две строки $S_{1}$ и $S_{2}$. Тогда расстояние Левенштейна можно найти по рекуррентной формуле (\ref{eq:ref1}):
 
@@ -34,12 +34,12 @@
 	\end{array} \right.
 \end{equation}
 
-Первые три уравнения в системе (1.1) являются тривиальными и подразумевают, соответственно, отсутствие действий (совпадение, так как обе строки пусты), вставки j символов в пустую $S_{1}$ для создания строки-копии $S_{2}$, длиной j, и удаления всех i символов из строки $S_{1}$ для совпадения с пустой строкой $S_{2}$. 
+Первые три уравнения в системе (1.1) являются тривиальными и подразумевают, соответственно: отсутствие действий (совпадение, так как обе строки пусты), вставку j символов в пустую $S_{1}$ для создания строки-копии $S_{2}$ длиной j, удаление всех i символов из строки $S_{1}$ для совпадения с пустой строкой $S_{2}$. 
 
-В дальнейшем необходимо выбирать минимум из штрафов, которые будут порождены операциями вставки символа в $S_{1}$ (первое уравнение в группе min), удаления символа из $S_{1}$, (второе уравнение в группе min), совпадения или замены, в зависимости от равенства рассматриваемых на данном этапе символов строк (третье уравнение в группе min).~\cite{Levenshtein}
+В дальнейшем необходимо выбирать минимум из штрафов, которые будут порождены операциями вставки символа в $S_{1}$ (первое уравнение в группе min), удаления символа из $S_{1}$, (второе уравнение в группе min), а также совпадения или замены, в зависимости от равенства рассматриваемых на данном этапе символов строк (третье уравнение в группе min).~\cite{Levenshtein}
 
 
-\section{Нахождение расстояния Дамерау-Левенштейна}
+\section{Расстояние Дамерау-Левенштейна}
  
 Расстояние Дамерау-Левенштейна между строками $S_{1}$ и $S_{2}$ рассчитывается по схожей с (\ref{eq:ref1}) рекуррентной формуле. Отличие состоит лишь в добавлении четвертого возможного уравнения (\ref{eq:ref2}) в группу min:
 
@@ -53,7 +53,9 @@
 	\label{eq:ref2}
 \end{equation}
 
-Это уравнение подразумевает перестановку соседних символов в $S_{1}$, если длины обеих строк больше единицы и соседние рассматриваемые символы в $S_{1}$ и $S_{2}$ крест-накрест равны. Если же хотя бы одно из условий не выполняется, то данное уравнение не учитывается при поиске минимума.
+Это уравнение подразумевает перестановку соседних символов в $S_{1}$, если длины обеих строк больше единицы, и соседние рассматриваемые символы в $S_{1}$ и $S_{2}$ крест-накрест равны. Если же хотя бы одно из условий не выполняется, то данное уравнение не учитывается при поиске минимума.
+
+Замечание: если в дополнение к условиям в формуле \ref{eq:ref2} также верно, что $a_i=b_j$, то прибавлять единицу к $D(S_1[1...i-2],S_2[1...j-2])$ нет необходимости, так как этот будет означать, что оба ссоседних рассматриваемых символа в строках совпадают, однако эти два идущих подряд совпадения будут учтены в третьем уравнении в группе min формулы \ref{eq:ref1}
 
 \section{Вывод}
 В данном разделе были рассмотрены основополагающие материалы и формулы, которые в дальнейшем потребуются при разработке и реализации алгоритмов поиска расстояний Левенштейна и Дамерау-Левенштейна.
