--- a/lab1/report/20-design.tex
+++ b/lab1/report/20-design.tex
@@ -2,7 +2,7 @@
 
 Рекуррентные формулы, рассмотренные в предыдущем разделе, позволяют находить расстояния Левенштейна и Дамерау-Левенштейна. Однако при разработке алгоритмов, решающих эти задачи, можно использовать различные подходы (циклы, рекурсия с кешированием, рекурсия без кеширования), которые будут рассмотрены в данном разделе.
 
-\section{Алгоритмы нахождения расстояния Левенштейна}
+\section{Алгоритмы поиска расстояния Левенштейна}
 
 На рисунке \ref{img:l_matrix} приведена схема итеративного алгоритма поиска расстояния Левенштейна с заполнением матрицы расстояний.
 
@@ -10,29 +10,22 @@
 
 На рисунке \ref{img:l_recursion_classic} приведена схема рекурсивного алгоритма поиска расстояния Левенштейна без кеширования.
 
-\img{220mm}{l_recursion_classic}{Схема рекурсивного алгоритма поиска расстояния Левенштейна без кеширования}
+\img{180mm}{l_recursion_classic}{Схема рекурсивного алгоритма поиска расстояния Левенштейна без кеширования}
 
 На рисунке \ref{img:l_recursion_matrix} приведена схема рекурсивного алгоритма поиска расстояния Левенштейна c кешированием.
 
 \img{220mm}{l_recursion_matrix}{Схема рекурсивного алгоритма поиска расстояния Левенштейна с кешированием}
 
-\section{Алгоритмы нахождения расстояния Дамерау-Левенштейна}
+\section{Алгоритм поиска расстояния Дамерау - Левенштейна}
 
-На рисунке \ref{img:Dl_recursion} приведена схема рекурсивного алгоритма поиска расстояния Дамерау-Левенштейна.
+На рисунке \ref{img:Dl_recursion} приведена схема рекурсивного алгоритма поиска расстояния Дамерау-Левенштейна без кеширования.
 
-\img{220mm}{Dl_recursion}{Схема рекурсивного алгоритма поиска расстояния Дамерау-Левенштейна}
+\img{220mm}{Dl_recursion}{Схема рекурсивного алгоритма поиска расстояния Дамерау-Левенштейна  без кеширования}
 
 
 
 \section*{Вывод}
 
-На основе теоретических данных, полученных из аналитического раздела были построены схемы требуемых алгоритмов.
+На основе теоретических данных, полученных из аналитического раздела, были разработаны схемы алгоритмов, позволяющих с помощью различных подходов находить расстояния Левенштейна и Дамерау-Левенштейна.
 
-
-%\begin{figure}[h]
-%\centering
-%\includegraphics[width=180mm]{inc/img/recursive_with_mem.png}
-%\caption{Схема процедуры рекурсивного алгоритма нахождения расстояния Дамерау-Левенштейна с заполнением матрицы}
-%\label{img:recursive_with_mem}
-%\end{figure}
 
