--- a/lab1/report/20-design.tex
+++ b/lab1/report/20-design.tex
@@ -26,6 +26,6 @@
 
 \section*{Вывод}
 
-На основе теоретических данных, полученных из аналитического раздела, были разработаны схемы алгоритмов, позволяющих с помощью различных подходов находить расстояния Левенштейна и Дамерау-Левенштейна.
+Были разработаны схемы алгоритмов, позволяющих с помощью различных подходов находить расстояния Левенштейна и Дамерау-Левенштейна.
 
 
