--- a/lab1/report/40-research.tex
+++ b/lab1/report/40-research.tex
@@ -11,9 +11,9 @@
 Технические характеристики устройства, на котором выполнялось тестирование:
 
 \begin{itemize}
-	\item Операционная система: Windows 10.
-	\item Оперативная память: 16 GiB.
-	\item Процессор: Intel® Core™ i5-8259U.
+	\item операционная система: Windows 10;
+	\item оперативная память: 16 Гб;
+	\item процессор: Intel® Core™ i5-8259U.
 \end{itemize}
 
 Во время тестирования ноутбук был включен в сеть питания и нагружен только встроенными приложениями окружения и системой тестирования.
@@ -32,15 +32,15 @@
  
  \img{120mm}{time_with_matrix}{Сравнение времени работы рекурсивных алгоритмов, использующих матрицы растояний}
  
- На рисунке \ref{img:time_rec_without_cash} приведено сравнение времени выполнения реализаций рекурсивных алгоритмов (без кеширования) поика расстояний Левенштейна и Дамерау-Левенштейна. На данном графике они совпадают, что объясняется схожим приципом работы и случайной генерацией строк. 
+ На рисунке \ref{img:time_rec_without_cash} приведено сравнение времени выполнения реализаций рекурсивных алгоритмов (без кеширования) поика расстояний Левенштейна и Дамерау-Левенштейна. Эти алгоритмы работали примерно одинаковое количество времени, однако алгоритм Дамерау-Левенштейна - немного дольше, так как ему требуется время на подсчет штрафа для дополнительной операции - обмена местами соседних символов.
  
  
  \img{120mm}{time_rec_without_cash}{Сравнение времени работы рекурсивных алгоритмов, не использующих кеш}
  
  
- Однако если специально подавать им такие строки, в которых возможна операция обмена соседних символов местами, то алгоритм Дамерау-Левенштейна будет работать дольше, так как ему потребуется время на подсчет штрафа для этой дополнительной операции. Это явление продемонстрировано на рисунке \ref{img:time_dl}. Алгоритмам подавались такие строки: в первой строке n раз повторяется комбинация 'ab', а во второй - n раз 'ba', где n принимает целые значения от 0 до 5.
+ %Однако если специально подавать им такие строки, в которых возможна операция обмена соседних символов местами, то алгоритм Дамерау-Левенштейна будет работать дольше, так как ему потребуется время на подсчет штрафа для этой дополнительной операции. Это явление продемонстрировано на рисунке \ref{img:time_dl}. Алгоритмам подавались такие строки: в первой строке n раз повторяется комбинация 'ab', а во второй - n раз 'ba', где n принимает целые значения от 0 до 5.
 
-\img{120mm}{time_dl}{Сравнение времени работы рекурсивных алгоритмов, не использующих кеш, при особых строках}
+%\img{120mm}{time_dl}{Сравнение времени работы рекурсивных алгоритмов, не использующих кеш, при особых строках}
 
 
 
@@ -50,7 +50,7 @@
 
 При использовании рекурсивной реализации без кеширования для каждого рекурсивного вызова функции будет необходимо выделять память под локальные переменные, возвращаемое функцией значение, адрес возврата. Максимальная глубина стека вызовов равна сумме длин исходных строк. Следовательно, пиковая затрачиваемая память растет пропорционально сумме длин строк. 
 
-При использовании итерационного алгоритма память в большей степени затрачивается на матрицу расстояний размером len($str_1$)\timeslen($str_2$). Следовательно, пиковая затрачиваемая память растет пропорционально произведению длин строк, что больше, чем при рекурсивной реализации.
+При использовании итерационного алгоритма память в большей степени затрачивается на матрицу расстояний размером  len($S_{1}$) на len($S_{2}$). Следовательно, пиковая затрачиваемая память растет пропорционально произведению длин строк, что больше, чем при рекурсивной реализации.
 
 Однако итерационный алгоритм можно оптимизировать по памяти, храня лишь последние две строки матрицы расстояний, и тогда пиковая затрачиваемая память будет расти пропорционально изменению длины одной из строк, что меньше, чем при рекурсивной реализации.
 
