--- a/lab1/report/10-analysis.tex
+++ b/lab1/report/10-analysis.tex
@@ -46,7 +46,7 @@
 \begin{equation}
 	\left[ 
 	\begin{array}{c} 
-		D(S_1[1...i-2],S_2[1...j-2]) + 1, $ если $ $i, j>1, $a_i=b_{j-1}, b_j=a_{i-1}$$\\
+		D(S_1[1...i-2],S_2[1...j-2]) + 1, $ если $ $i, j>1, $a_i=b_{j-1}, b_j=a_{i-1}\\
 		\infty $ , иначе$ 
 	\end{array}
 	\right.\\
@@ -57,5 +57,5 @@
 
 Замечание: если в дополнение к условиям в формуле \ref{eq:ref2} также верно, что $a_i=b_j$, то прибавлять единицу к $D(S_1[1...i-2],S_2[1...j-2])$ нет необходимости, так как этот будет означать, что оба ссоседних рассматриваемых символа в строках совпадают, однако эти два идущих подряд совпадения будут учтены в третьем уравнении в группе min формулы \ref{eq:ref1}
 
-\section{Вывод}
+\section*{Вывод}
 В данном разделе были рассмотрены основополагающие материалы и формулы, которые в дальнейшем потребуются при разработке и реализации алгоритмов поиска расстояний Левенштейна и Дамерау-Левенштейна.
