--- a/lab1/report/00-title.tex
+++ b/lab1/report/00-title.tex
@@ -25,7 +25,7 @@
 	\noindent\textbf{Тема} $\underline{\text{Расстояние Левенштейна и Дамерау-Левенштейна}}$\newline\newline\newline
 	\noindent\textbf{Студент} $\underline{\text{Зайцева А.А.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}}$\newline\newline
 	\noindent\textbf{Группа} $\underline{\text{ИУ7-52Б~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}}$\newline\newline
-	\noindent\textbf{Преподаватели} \underline{Волкова Л.Л., Строганов Ю.В.}\newline
+	\noindent\textbf{Преподаватели} \underline{Волкова Л.Л.}\newline
 	
 	\begin{center}
 		\vfill
