--- a/lab1/report/02-intro.tex
+++ b/lab1/report/02-intro.tex
@@ -7,7 +7,7 @@
 
 Редакционное предписание – последовательность действий, необходимых для получения второй строки из первой  кратчайшим способом. 
 
-Расстояние Левенштейна – минимальное количество действий (вставка, удаление, замена символа), необходимых для преобразования одного слова в другое. 
+Расстояние Левенштейна – минимальное количество действий (вставка, удаление, замена символа), необходимых для преобразования одной строки в другую. 
 
 Если текст был набран с клавиатуры, то вместо расстояния Левенштейна чаще используют расстояние Дамерау – Левенштейна, в котором добавляется еще одно возможное действие - перестановка двух соседних символов.~\cite{Passenger}
 
@@ -15,7 +15,7 @@
 \begin{itemize}
 	\item компьютерная лингвистика (автозамена в посиковых запросах, текстовая редактура);
 	\item биоинформатика (сравнение генов, хромосом и белков);
-	\item нечеткий поиск записей в базах (борьба с мошенниками и опечатками);
+	\item нечеткий поиск записей в базах (борьба с мошенниками и опечатками).
 \end{itemize}
 
 В рамках выполнения работы необходимо решить следующие задачи: 
