--- a/lab1/report/30-impl.tex
+++ b/lab1/report/30-impl.tex
@@ -112,7 +112,7 @@
 		replacement = lowenstein_dist_recursion_classic(str1[:-1], str2[:-1]) + int(str1[-1] != str2[-1])
 		
 		if len(str1) > 1 and len(str2) > 1 and str1[-1] == str2[-2] and str1[-2] == str2[-1]:
-			xchange = lowenstein_dist_recursion_classic(str1[:-2], str2[:-2]) + int(str1[-1] != str2[-1])
+			xchange = lowenstein_dist_recursion_classic(str1[:-2], str2[:-2]) + 1
 			return min(insertion, deletion, replacement, xchange)
 		else:
 			return min(insertion, deletion, replacement)
@@ -120,7 +120,7 @@
 
 \section{Тестирование}
 
-В таблице \ref{test} приведены функциональные тесты для алгоритмов вычисления расстояния Левенштейна и Дамерау — Левенштейна. Тесты пройдены успешно.
+В таблице \ref{test} приведены функциональные тесты для алгоритмов вычисления расстояний Левенштейна и Дамерау — Левенштейна (в таблице приняты обозначения: РЛ - алгоритм поиска расстояния Левенштейна, РДЛ - алгоритм поиска рассотяния Дамерау-Левенштейна). Все тесты пройдены успешно.
 
 \begin{table}[h]
 	\begin{center}
@@ -128,7 +128,7 @@
 		\begin{tabular}{|c|c|c|c|}
 			\hline
 			&                    & \multicolumn{2}{c|}{\bfseries Ожидаемый результат}    \\ \cline{3-4}\hline
-			Строка 1& Строка 2 & Алг. Левенштейна & Алг. Дамерау-Левенштейна \\ [0.5ex] 
+			Строка 1& Строка 2 & РЛ & РДЛ \\ [0.5ex] 
 			\hline
 			 &  & 0 & 0\\
 			\hline
