--- a/lab1/report/10-analysis.tex
+++ b/lab1/report/10-analysis.tex
@@ -34,14 +34,14 @@
 	\end{array} \right.
 \end{equation}
 
-Первые три уравнения в системе (1.1) являются тривиальными и подразумевают, соответственно: отсутствие действий (совпадение, так как обе строки пусты), вставку j символов в пустую $S_{1}$ для создания строки-копии $S_{2}$ длиной j, удаление всех i символов из строки $S_{1}$ для совпадения с пустой строкой $S_{2}$. 
+Первые три формулы в системе (1.1) являются тривиальными и подразумевают, соответственно: отсутствие действий (совпадение, так как обе строки пусты), вставку j символов в пустую $S_{1}$ для создания строки-копии $S_{2}$ длиной j, удаление всех i символов из строки $S_{1}$ для совпадения с пустой строкой $S_{2}$. 
 
-В дальнейшем необходимо выбирать минимум из штрафов, которые будут порождены операциями вставки символа в $S_{1}$ (первое уравнение в группе min), удаления символа из $S_{1}$, (второе уравнение в группе min), а также совпадения или замены, в зависимости от равенства рассматриваемых на данном этапе символов строк (третье уравнение в группе min).~\cite{Levenshtein}
+В дальнейшем необходимо выбирать минимум из штрафов, которые будут порождены операциями вставки символа в $S_{1}$ (первая формула в группе min), удаления символа из $S_{1}$, (вторая форумла в группе min), а также совпадения или замены, в зависимости от равенства рассматриваемых на данном этапе символов строк (третья формула в группе min)~\cite{Levenshtein}.
 
 
 \section{Расстояние Дамерау-Левенштейна}
  
-Расстояние Дамерау-Левенштейна между строками $S_{1}$ и $S_{2}$ рассчитывается по схожей с (\ref{eq:ref1}) рекуррентной формуле. Отличие состоит лишь в добавлении четвертого возможного уравнения (\ref{eq:ref2}) в группу min:
+Расстояние Дамерау-Левенштейна между строками $S_{1}$ и $S_{2}$ рассчитывается по схожей с (\ref{eq:ref1}) рекуррентной формуле. Отличие состоит лишь в добавлении четвертого возможного варианта (\ref{eq:ref2}) в группу min:
 
 \begin{equation}
 	\left[ 
@@ -53,9 +53,44 @@
 	\label{eq:ref2}
 \end{equation}
 
-Это уравнение подразумевает перестановку соседних символов в $S_{1}$, если длины обеих строк больше единицы, и соседние рассматриваемые символы в $S_{1}$ и $S_{2}$ крест-накрест равны. Если же хотя бы одно из условий не выполняется, то данное уравнение не учитывается при поиске минимума.
+Этот вариант подразумевает перестановку соседних символов в $S_{1}$, если длины обеих строк больше единицы, и соседние рассматриваемые символы в $S_{1}$ и $S_{2}$ крест-накрест равны. Если же хотя бы одно из условий не выполняется, то данная оперция не учитывается при поиске минимума.
 
-Замечание: если в дополнение к условиям в формуле \ref{eq:ref2} также верно, что $a_i=b_j$, то прибавлять единицу к $D(S_1[1...i-2],S_2[1...j-2])$ нет необходимости, так как этот будет означать, что оба ссоседних рассматриваемых символа в строках совпадают, однако эти два идущих подряд совпадения будут учтены в третьем уравнении в группе min формулы \ref{eq:ref1}
+Итоговая же формула для поиска расстояния Дамерау-Левенштейна имеет следующиий вид (\ref{eq:ref3}):
+
+\begin{equation}
+	D(S_1[1...i],S_2[1...j]) = \left\{ \begin{array}{ll}
+		$0, если i == 0, j == 0$\\
+		$j, если i == 0, j > 0$\\
+		$i, если j == 0, i > 0$ 	\label{eq:ref3}\\ 
+		min(\\
+		D(S_1[1...i],S_2[1...j-1]) + 1,\\
+		D(S_1[1...i-1], S_2[1...j]) + 1, & $j>0, i>0$\\
+		D(S_1[1...i-1], S_2[1...j-1]) + \\
+		\left[ 
+		\begin{array}{c} 
+			$0, если $S_1$[i] == $S_2$[j]$\\
+			$1, иначе$
+		\end{array}\\,\\
+		
+		
+		
+			\left[ 
+		\begin{array}{c} 
+			D(S_1[1...i-2],S_2[1...j-2]) + 1, \\
+			$ если $ $i, j>1, $a_i=b_{j-1}, b_j=a_{i-1};\\
+			\infty $ , иначе$ 
+		\end{array}
+		
+		
+		
+		\right.\\
+		)
+	\end{array} \right.
+\end{equation}
+
+
+
+%Замечание: если в дополнение к условиям в формуле \ref{eq:ref2} также верно, что $a_i=b_j$, то прибавлять единицу к $D(S_1[1...i-2],S_2[1...j-2])$ нет необходимости, так как этот будет означать, что оба ссоседних рассматриваемых символа в строках совпадают, однако эти два идущих подряд совпадения будут учтены в третьем уравнении в группе min формулы \ref{eq:ref1}
 
 \section*{Вывод}
 В данном разделе были рассмотрены основополагающие материалы и формулы, которые в дальнейшем потребуются при разработке и реализации алгоритмов поиска расстояний Левенштейна и Дамерау-Левенштейна.
