--- a/lab1/report/20-design.tex
+++ b/lab1/report/20-design.tex
@@ -4,23 +4,63 @@
 
 \section{Алгоритмы поиска расстояния Левенштейна}
 
-На рисунке \ref{img:l_matrix} приведена схема итеративного алгоритма поиска расстояния Левенштейна с заполнением матрицы расстояний.
+На рисунке \ref{fig:l_matrix} приведена схема итеративного алгоритма поиска расстояния Левенштейна с заполнением матрицы расстояний.
 
-\img{220mm}{l_matrix}{Схема итеративного алгоритма поиска расстояния Левенштейна с заполнением матрицы расстояний}
+\begin{figure}[h!]
+	
+	\centering{\includegraphics[scale=0.5]{inc/img/l_matrix.png}}
+	
+	\caption{Схема итеративного алгоритма поиска расстояния Левенштейна с заполнением матрицы расстояний}
+	
+	\label{fig:l_matrix}
+	
+\end{figure}
 
-На рисунке \ref{img:l_recursion_classic} приведена схема рекурсивного алгоритма поиска расстояния Левенштейна без кеширования.
+%\img{220mm}{l_matrix}{Схема итеративного алгоритма поиска расстояния Левенштейна с заполнением матрицы расстояний}
 
-\img{180mm}{l_recursion_classic}{Схема рекурсивного алгоритма поиска расстояния Левенштейна без кеширования}
+На рисунке \ref{fig:l_recursion_classic} приведена схема рекурсивного алгоритма поиска расстояния Левенштейна без кеширования.
 
-На рисунке \ref{img:l_recursion_matrix} приведена схема рекурсивного алгоритма поиска расстояния Левенштейна c кешированием.
+\begin{figure}[h!]
+	
+	\centering{\includegraphics[scale=0.5]{inc/img/l_recursion_classic.png}}
+		
+	\caption{Схема рекурсивного алгоритма поиска расстояния Левенштейна без кеширования}
+		
+	\label{fig:l_recursion_classic}
+		
+\end{figure}
 
-\img{220mm}{l_recursion_matrix}{Схема рекурсивного алгоритма поиска расстояния Левенштейна с кешированием}
+%\img{180mm}{l_recursion_classic}{Схема рекурсивного алгоритма поиска расстояния Левенштейна без кеширования}
+
+На рисунке \ref{fig:l_recursion_matrix} приведена схема рекурсивного алгоритма поиска расстояния Левенштейна c кешированием.
+
+\begin{figure}[h!]
+	
+	\centering{\includegraphics[scale=0.5]{inc/img/l_recursion_matrix.png}}
+		
+	\caption{Схема рекурсивного алгоритма поиска расстояния Левенштейна с кешированием}
+		
+	\label{fig:l_recursion_matrix}
+		
+\end{figure}
+
+%\img{220mm}{l_recursion_matrix}{Схема рекурсивного алгоритма поиска расстояния Левенштейна с кешированием}
 
 \section{Алгоритм поиска расстояния Дамерау - Левенштейна}
 
-На рисунке \ref{img:Dl_recursion} приведена схема рекурсивного алгоритма поиска расстояния Дамерау-Левенштейна без кеширования.
+На рисунке \ref{fig:Dl_recursion} приведена схема рекурсивного алгоритма поиска расстояния Дамерау-Левенштейна без кеширования.
 
-\img{220mm}{Dl_recursion}{Схема рекурсивного алгоритма поиска расстояния Дамерау-Левенштейна  без кеширования}
+\begin{figure}[h!]
+	
+	\centering{\includegraphics[scale=0.5]{inc/img/Dl_recursion.png}}
+		
+		\caption{Схема рекурсивного алгоритма поиска расстояния Дамерау-Левенштейна  без кеширования}
+		
+		\label{fig:Dl_recursion}
+		
+	\end{figure}
+
+%\img{220mm}{Dl_recursion}{Схема рекурсивного алгоритма поиска расстояния Дамерау-Левенштейна  без кеширования}
 
 
 
