--- a/lab1/report/50-conclusion.tex
+++ b/lab1/report/50-conclusion.tex
@@ -1,7 +1,7 @@
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
 
-В результате выполнения лабораторной работы при при исследовании алгоритмов нахождения расстояний Левенштейна и Дамерау-Левенштейна были применены и отработаны навыки динамического программирования.
+В результате выполнения лабораторной работы при исследовании алгоритмов нахождения расстояний Левенштейна и Дамерау-Левенштейна были применены и отработаны навыки динамического программирования.
 
 В ходе выполнения лабораторной работы были выполнены следующие задачи: 
 \begin{enumerate}[label={\arabic*)}]
