--- a/lab3/report/20-design.tex
+++ b/lab3/report/20-design.tex
@@ -2,6 +2,8 @@
 
 В данном разделе будут рассмотрены схемы описанных в предыдущем разделе алгоритмов сортировок.
 
+\section{Схема алгоритма сортировки вставками}
+
 На рисунке \ref{fig:insertion} приведена схема алгоритма сортировки вставками.
 
 \begin{figure}[h!]
@@ -14,6 +16,7 @@
 	
 \end{figure}
 
+\section{Схема алгоритма сортировки пузырьком}
 
 На рисунке \ref{fig:bubble} приведена схема алгоритма сортировки пузырьком.
 
@@ -26,6 +29,8 @@
 	\label{fig:bubble}
 	
 \end{figure}
+
+\section{Схема алгоритма шейкерной сортировки}
 
 На рисунке \ref{fig:shaker} приведена схема алгоритма шейкерной сортировки.
 
