--- a/lab3/report/30-impl.tex
+++ b/lab3/report/30-impl.tex
@@ -4,7 +4,7 @@
 
 \section{Требования к ПО}
 
-На вход программе подается массив целых чисел, а на выходе должен быть получен масссив, отсортированный с помощью каждого реализованного алгоритма сортировки: вставками, пузырьком и шейкерной. Также необходимо вывести затраченное каждым алгоритмом процессорное время.
+На вход программе подается массив целых чисел, а на выходе должен быть получен масссив, отсортированный с помощью каждого реализованного алгоритма сортировки: вставками, пузырьком и шейкерной. Также необходимо вывести затраченное каждой реализацией процессорное время.
 
 \section{Выбор средств реализации}
 
@@ -43,7 +43,7 @@
 \end{lstlisting}
 
 \begin{lstlisting}[caption=Реализация алгоритма шейкерной сортировки,
-	label={shaker_sort}]
+	label={shaker_list}]
 
 	def shaker_sort(arr, n):
 		left = 0
@@ -63,39 +63,26 @@
 
 \section{Тестирование}
 
-В таблице \ref{test} приведены функциональные тесты для алгоритмов сортировок. Все тесты пройдены успешно каждой реализацией.
+В таблице \ref{test} приведены функциональные тесты для реализаций алгоритмов сортировок. Все тесты пройдены успешно каждой реализацией.
 
 \begin{table}[h]
 	\begin{center}
 		\caption{\label{test} Тесты}
-		\begin{tabular}{|c|c|c|c|}
-			\hline
-			&                    & \multicolumn{2}{c|}{\bfseries Ожидаемый результат}    \\ \cline{2-3-4}\hline
-			Массив & i & РЛ & РДЛ \\ [0.5ex] 
-			\hline
-			 &  & 0 & 0\\
-			\hline
-			abc & abc & 0 & 0\\
-			\hline
-			ab & a & 1 & 1\\
-			\hline
-			a & ab & 1 & 1\\
-			\hline
-			see & sea & 1 & 1\\
-			\hline
-			1234 & 1324 & 2 & 1\\
-			\hline
-			hello & ehlla & 3 & 2\\
-			\hline
-			cat & pop & 3 & 3\\
-			\hline
-			кот & скат & 2 & 2\\
-			\hline
-		\end{tabular}
+\begin{tabular}{ | l | l | }
+	\hline
+	Исходный массив & Ожидаемый результат \\ \hline
+	 &  \\
+	1 & 1 \\
+	4, 4, 4, 4 & 4, 4, 4, 4 \\
+	-1, 1, 2, 2, 10 & -1, 1, 2, 2, 10 \\
+	9, 8, 0 & 0, 8, 9 \\
+	4, 5, 2, -1, 5, 6 & -1, 2, 4, 5, 5, 6 \\
+	\hline
+\end{tabular}
 	\end{center}
 \end{table}
 
 
 \section*{Вывод}
 
-Был производен выбор средств реализации, реализованы и протестированы алгоритмы поиска расстояний: Левенштейна - итерационный и рекурсивный (с кешем и без), Дамерау-Левенштейна - рекурсивный без кеша
+Был производен выбор средств реализации, реализованы и протестированы алгоритмы сортировок (вставками, пузырьком и шейкером), а также приведены требования к ПО.
