--- a/lab3/report/40-research.tex
+++ b/lab3/report/40-research.tex
@@ -18,45 +18,42 @@
 
 Во время тестирования ноутбук был включен в сеть питания и нагружен только встроенными приложениями окружения и системой тестирования.
 
-\section{Время выполнения алгоритмов}
 
- Все реализации алгоритмов сравнивались на случайно сгенерированных строках длиной от 0 до 10 с шагом 1, а те, что используют матрицы расстояний, еще и на строках длиной от 20 до 100 с шагом 10. Так как замеры времени имеют некоторую погрешность, они для каждой длины строк и каждой реализации алгоритма производились 10 раз, а затем вычислялось среднее время работы реализации со строкой.
- 
-На рисунке \ref{img:time_all} приведены результаты сравнения времени работы всех реализаций. Как видно на графике, реализации, использующие матрицы рассотяний, работают значительно быстрее рекурсивных реализаций без кеширования. Это обусловлено отсутвием в первых вызова функций для вычисления значений, которые уже были подсчитаны ранее.
+\section{Сравнение трудоемкости реализаций алгоритмов}
+допишем
 
-\img{120mm}{time_all}{Сравнение времени работы реализаций алгоритмов}
 
- Чтобы получить полную картину, сравним отдельно реализации, использующие матрицы рассотяний, и те, которые их не используют.
+\section{Сравнение времени выполнения реализаций алгоритмов}
+
+ Все реализации алгоритмов сравнивались на трех видах массивов: упорядоченный (лучший случай - все реализации выдают наименьшее время работы), упорядоченный в обратном порядке (худший случай - все реализации выдают наибольшее время работы), случайно сгенерированный массив (произвольный случай). При этом для каждого класса массивов создавались массивы длиной от 0 до 10000 с шагом, увеличивающимся по мере роста длины массива. 
  
- На рисунке \ref{img:time_with_matrix} приведено сравнение времени выполнения реализаций итерационного и рекурсивного (с кешированием) алгоритмов поика расстояния Левенштейна. Как видно, время их работы растет соизмеримо, что обусловлено их схожестью в отсутствии вызова функций для вычисления значений, которые уже были подсчитаны ранее. Однако вторая реализация все же работает дольше, так как в ней тратится время на рекурсивный вызов самой себя. 
- 
- \img{120mm}{time_with_matrix}{Сравнение времени работы реализациий рекурсивных алгоритмов, использующих матрицы растояний}
- 
- На рисунке \ref{img:time_rec_without_cash} приведено сравнение времени выполнения реализаций рекурсивных алгоритмов (без кеширования) поика расстояний Левенштейна и Дамерау-Левенштейна. Эти реализации работали примерно одинаковое количество времени, однако для Дамерау-Левенштейна - немного дольше, так как ему требуется время на подсчет штрафа для дополнительной операции - обмена местами соседних символов.
+ Так как сортировки выполняются достаточно быстро, а замеры времени имеют некоторую погрешность, они для каждых класса и длины массивы и каждой реализации алгоритма сортировки выполнялись 10 раз, а затем вычислялось среднее время работы.
  
  
- \img{120mm}{time_rec_without_cash}{Сравнение времени работы реализаций рекурсивных алгоритмов, не использующих кеш}
- 
- 
- %Однако если специально подавать им такие строки, в которых возможна операция обмена соседних символов местами, то алгоритм Дамерау-Левенштейна будет работать дольше, так как ему потребуется время на подсчет штрафа для этой дополнительной операции. Это явление продемонстрировано на рисунке \ref{img:time_dl}. Алгоритмам подавались такие строки: в первой строке n раз повторяется комбинация 'ab', а во второй - n раз 'ba', где n принимает целые значения от 0 до 5.
+На рисунке \ref{img:time_all} приведены результаты сравнения времени работы всех реализаций на всех массивах. 
 
-%\img{120mm}{time_dl}{Сравнение времени работы рекурсивных алгоритмов, не использующих кеш, при особых строках}
+\img{120mm}{time_all}{Сравнение времени работы реализаций всех алгоритмов на всех массивах}
 
 
 
-\section{Пиковая требуемая алгоритмами память}
+На рисунках \ref{img:time_best} - \ref{img:time_middle} приведены результаты сравнения времени работы всех реализаций на отдельных классах массивов.
 
-Реализации алгоритмов нахождения расстояний Левенштейна и Дамерау—Левенштейна имеют одинаковый подход к использованию памяти. Следовательно, достаточно сравнить, как с увеличением длин строк изменяется пиковая затрачиваемая память в рекурсивных и итерационных реализациях. 
+\img{100mm}{time_best}{Сравнение времени работы реализаций всех алгоритмов на упорядоченных массивах}
 
-При использовании рекурсивной реализации без кеширования для каждого рекурсивного вызова функции будет необходимо выделять память под локальные переменные, возвращаемое функцией значение, адрес возврата. Максимальная глубина стека вызовов на 2 больше суммы длин исходных строк. Следовательно, пиковая затрачиваемая память растет пропорционально сумме длин строк. 
+\img{100mm}{time_worst}{Сравнение времени работы реализаций всех алгоритмов на упорядоченных в обратном порядке массивах}
 
-При использовании итерационной реализайии память в большей степени затрачивается на матрицу расстояний размером  len($S_{1}$) + 1 на len($S_{2}$) + 1. Следовательно, пиковая затрачиваемая память растет пропорционально произведению длин строк, что больше, чем при рекурсивной реализации.
+\img{100mm}{time_middle}{Сравнение времени работы реализаций всех алгоритмов на произвольных массивах}
 
-Однако итерационную реализацию можно оптимизировать по памяти, храня лишь последние две строки матрицы расстояний, и тогда пиковая затрачиваемая память будет расти пропорционально изменению длины одной из строк, что меньше, чем при рекурсивной реализации.
 
-Рекурсивные функции с кешированием по этому показателю - худший вариант, так как они потребуют память как под матрицу расстояний (хотя бы в одном экземпляре), так и под стек вызовов.
 
-При небольших длинах строк затрачиваемая память сильно зависит от самой реализации каждого алгоритма (количество локальных переменных, подходы к хранению строк и матриц)
+На рисунках \ref{img:time_insertion} - \ref{img:time_shaker} приведены результаты сравнения времени работы каждой реализации на всех классах массивов.
+
+\img{100mm}{time_insertion}{Сравнение времени работы реализации алгоритма сортировки вставками на всех классах массивов}
+
+\img{100mm}{time_bubble}{Сравнение времени работы реализации алгоритма сортировки пузырьком на всех классах массивов}
+
+\img{100mm}{time_shaker}{Сравнение времени работы реализации алгоритма шейкерной сортировки на всех классах массивов}
+
 
 \section*{Вывод}
 
