--- a/lab3/report/50-conclusion.tex
+++ b/lab3/report/50-conclusion.tex
@@ -1,13 +1,14 @@
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
 
-В результате выполнения лабораторной работы при исследовании алгоритмов нахождения расстояний Левенштейна и Дамерау-Левенштейна были применены и отработаны навыки динамического программирования.
+В результате выполнения лабораторной работы были получены навыки оценки трудоемкости алгоритмов на примере трех алгоритмов сортировок.
 
 В ходе выполнения лабораторной работы были выполнены следующие задачи: 
 \begin{enumerate}[label={\arabic*)}]
-	\item изучены расстояния Левенштейна и Дамерау-Левенштейна;
-	\item разработаны и рнализованы алгоритмы поиска этих расстояний;
-	\item проведен сравнительный анализ процессорного времени выполнения реализаций этих алгоритмов, а также затрачиваемой ими пиковой памяти;
-	\item был подготовлен отчет по лабораторной работе.
+	\item изучены три алгоритма сортировок: сортировка вставками, сортировка пузырьком и шейкерная сортировка;
+	\item разработтаны и реализованы изученные алгоритмы;
+	\item проведен сравнительный анализ трудоёмкости реализаций алгоритмов на основе теоретических расчетов;
+	\item проведен сравнительный анализ процессорного времени выполнения реализаций алгоритмов на основе экспериментальных данных.
 \end{enumerate}
+
 
