--- a/lab1/report/40-research.tex
+++ b/lab1/report/40-research.tex
@@ -18,7 +18,7 @@
 
 Во время тестирования ноутбук был включен в сеть питания и нагружен только встроенными приложениями окружения и системой тестирования.
 
-\section{Время выполнения алгоритмов}
+\section{Время выполнения реализаций алгоритмов}
 
  Все реализации алгоритмов сравнивались на случайно сгенерированных строках длиной от 0 до 10 с шагом 1, а те, что используют матрицы расстояний, еще и на строках длиной от 20 до 100 с шагом 10. Так как замеры времени имеют некоторую погрешность, они для каждой длины строк и каждой реализации алгоритма производились 10 раз, а затем вычислялось среднее время работы реализации со строкой.
  
