--- a/lab3/report/40-research.tex
+++ b/lab3/report/40-research.tex
@@ -19,10 +19,6 @@
 Во время тестирования ноутбук был включен в сеть питания и нагружен только встроенными приложениями окружения и системой тестирования.
 
 
-\section{Сравнение трудоемкости реализаций алгоритмов}
-допишем
-
-
 \section{Сравнение времени выполнения реализаций алгоритмов}
 
  Все реализации алгоритмов сравнивались на трех видах массивов: упорядоченный (лучший случай - все реализации выдают наименьшее время работы), упорядоченный в обратном порядке (худший случай - все реализации выдают наибольшее время работы), случайно сгенерированный массив (произвольный случай). При этом для каждого класса массивов создавались массивы длиной от 0 до 10000 с шагом, увеличивающимся по мере роста длины массива. 
@@ -55,12 +51,48 @@
 \img{100mm}{time_shaker}{Сравнение времени работы реализации алгоритма шейкерной сортировки на всех классах массивов}
 
 
+
+\section{Сравнение трудоемкости реализаций алгоритмов}
+
+Введем модель вычисления трудоемкости для оценки алгоритмов: 
+\begin{itemize}
+	\item базовые операции стоимостью 1: -, --, -=, +, ++, +=, ==, !=, <, >, <=, >=, >>, <<, [];
+	\item базовые операции стоимостью 2: *, *=, /, /=, \%, \%=;
+	\item оценка трудоемкости цикла: Fц = Finit + Fсравн + N * (Fтела + Finc + Fсравн), где Finit, Fсравн, Fтела, Finc - трудоемкости инициализации,  проверки условия цикла, инкрементирования и тела цикла, соответственно, а N - количество итераций;
+	\item стоимость условного оператроа: Fуо = Fсравн + 
+	\begin{equation}
+		+
+		\left[ 
+		\begin{array}{c} 
+			min(f1, f2) \\
+			max(f1, f2)\\
+		\end{array}
+		\right.,\\
+	\end{equation}где Fсравн, f1, f2 - трудоемкости проверки условия, первого блока и второго блока, соответственно.
+	
+\end{itemize}
+
+Оценим трудоемкость реализаций алгоритмов сортировки.
+
+Рассмотрим трудоемкость реализации алгоритма сортировки вставками.
+
+Лучший случай (отсортированный массив): алгоритм ни разу не войдет во внутренний цикл. Трудоемкость: $f(n) = 2 + (n - 1)(2 + 1 + 2 + 4 + 2) =  11n - 9 = O(n)$.
+
+Худший случай (отсортированный в обратном порядке массив): алгоритм будет полностью (пока не дойдет до начала массива) проходить внутренний цикл каждый раз . Трудоемкость: $f(n) = 2 + (n - 1)(2 + 1 + 2 + 4 + 2 + \frac{n}{2} (4 + 4 + 1)) =  \frac{9n^2}{2} + \frac{13n}{2} - 9 = O(n^2)$.
+
+
+Рассмотрим трудоемкость алгоритма сортировки пузырьком.
+
+Лучший случай (отсортированный массив): не будет произведено ни одного обмена. Трудоемкость: $f(n) = 3 + (n - 1)(3 + \frac{n}{2} 4) = 2n^2 + n = O(n^2)$.
+
+Худший случай (отсортированный в обратном порядке массив): замена во внутреннем цикле будет производиться каждый раз. Трудоемкость: $f(n) = 3 + (n - 1)(3 + \frac{n}{2} (4 + 9) = \frac{13n^2}{2} - \frac{7n}{2} = O(n^2)$.
+
+
+
 \section*{Вывод}
 
-Реализации алгоритмов нахождения расстояния Дамерау — Левенштейна по времени выполнения сопоставимы с реализациями алгоритмом нахождения расстояния Левенштейна, хотя и немного уступают вторым в связи с дополнительной проверкой, позволяющей находить ошибки пользователя, связанные с неверным порядком букв. Однако эта операция зачастую позволяет найти более короткое расстояние между строками.
+Реализация сортировки пузырьком квадратично зависит от количества элементов в массиве (как в лучшем, так и в худшем случае) и работает дольше всех остальных протестированных реализаций. Ее модификация - шейкерная сортировка - показывает схожие результаты, так как является модификацией только лишь по направлению движения. 
 
-Рекурсивные реализации алгоритмов нахождения расстояний Левенштейна и Дамерау-Левенштейна, не использующие кеширование, работают на порядок дольше итеративных реализаций. При применении кеширования они требуют меньше времени, однако все равно уступают по производительности итеративным алгоритмам, особенно при большой длине строк. 
+Реализацией, которая работает меньшее количество времени, чем вышеупомянутые, является реализация алгоритма сортирвки вставками. Для нее в худшем случае время сортировки массива также квадратично зависит от количества элементов в нем, как и для алгоритмов пузырьковой и шейкерной сортировки. Но для лучшего случая время работы реализации алгоритма сортирвки вставками зависит от количества элементов линейно.
 
-Но по расходу памяти итеративные реализации проигрывают рекурсивным: максимальный размер используемой памяти в них пропорционален произведению длин строк, в то время как в рекурсивных — сумме длин строк.
-
-Если же применить к итеративным реализациям оптимизацию по памяти, то они будут выигрывать как по пиковой затрачиваемой памяти, так и по времени выполнения.
+Таким образом, реализацией с наименьшим временем выполнения (по экспериментальным данным - во всех случаях) является сортировка вставками.
