--- a/lab3/report/50-conclusion.tex
+++ b/lab3/report/50-conclusion.tex
@@ -6,7 +6,7 @@
 В ходе выполнения лабораторной работы были выполнены следующие задачи: 
 \begin{enumerate}[label={\arabic*)}]
 	\item изучены три алгоритма сортировок: сортировка вставками, сортировка пузырьком и шейкерная сортировка;
-	\item разработтаны и реализованы изученные алгоритмы;
+	\item разработаны и реализованы изученные алгоритмы;
 	\item проведен сравнительный анализ трудоёмкости реализаций алгоритмов на основе теоретических расчетов;
 	\item проведен сравнительный анализ процессорного времени выполнения реализаций алгоритмов на основе экспериментальных данных.
 \end{enumerate}
